# polywatch

./: .gitignore  CLAUDE.md  DOMAIN_KNOWLEDGE.md  GOALS.md  alert_watch.py  alert_watch_silent.vbs  db.py  pyproject.toml  scanner.py
docs/agents/: ddd_architecture.md
eda/: wallet_cache.py
src/: config.py  runner.py
src/application/: market_scan.py  message_formatter.py  ports.py  position_monitor.py
src/domain/: market_filter.py  signal_detector.py  wallet.py  wallet_classifier.py  wallet_profiler.py
src/infrastructure/: polymarket_adapter.py  sqlite_repos.py  telegram_adapter.py
tests/integration/: test_position_monitor.py  test_sqlite_integration.py
tests/unit/: test_config.py  test_market_filter.py  test_polymarket_adapter.py  test_ports.py  test_position_monitor_unit.py  test_signal_detector.py  test_sqlite_repos.py  test_telegram_adapter.py  test_wallet_classifier.py  test_wallet_profile.py  test_wallet_profiler.py
